# shape-core-sse

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE_PATTERNS.md  CHANGELOG.md  CLAUDE.md  COORDINATION.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_CONNECTOR_GUIDE.md  RAILWAY_DEPLOYMENT.md  README-MVP.md  README.md  SHAPE_REBRANDING_PLAN.md  SPRINT_PLAN.md  SSE_PROJECT_SPEC.md  TODO.md  admin-utility.html  build_output.txt  claude-web-test.html  collaboration.md  docker-compose.yml  mcp-implementation-steering.md  mpcm-pro-graph.dot  mpcm-pro-timeline.html  nixpacks.toml  package-lock.json  package.json  railway.toml  timeline.html  tsconfig.json
certs/: cert.pem  key.pem
demo-output/: .gitignore  README.md  package.json
deploy/: docker-run.sh  fly.toml  railway.json  render.yaml
docs/: CLAUDE_CODE_GUIDE.md  CONTEXT_MEMORY_EXAMPLE.md  CONTEXT_MEMORY_TEMPLATE.md  CONTINUATION_PROMPT.md  DEVELOPMENT_BEST_PRACTICES.md  QUICK_START_PROMPTS.md  SECURITY_FIX_SUMMARY.md  SPRINT_1_README.md  SPRINT_1_TODO_LIST.md  TECH_IMPLEMENTATION_PLAN.md  TEST_PLAN.md  mpcm-pro-consultant-recommendations.md  typescript-rust-interface.md
mpcm-service/: Cargo.toml
mpcm-service/mpcm-core/: Cargo.toml
mpcm-service/mpcm-core/src/: context.rs  error.rs  lib.rs  storage.rs  storage_v2.rs
mpcm-service/mpcm-core/src/adapters/: filesystem.rs  git.rs  mod.rs  terminal.rs
mpcm-service/mpcm-core/src/registry/: mod.rs  router.rs
mpcm-service/mpcm-core/tests/: orchestration_test.rs  registry_integration.rs
mpcm-service/mpcm-server/: Cargo.toml
mpcm-service/mpcm-server/src/: handlers.rs  handlers_v2.rs  main.rs  main_v2.rs  protocol.rs  server.rs  server_v2.rs
nginx/: nginx.conf
performance-results/: baseline.json
scripts/: README-context-tools.md  README-optimize-memory.md  analyze-context.ts  export-context.ts  list-context.ts  optimize-memory.ts  restore-projects.sql  serve-util.mjs  setup-jenkins.sh  start-server.sh  start-simple.sh  test-remote.mjs  test-server.mjs  trigger-jenkins-build.sh  visualize-graph.ts  visualize-timeline.ts
src/: index-pro-backup.ts  index.ts  oauth-consent.html
test-prompts/: 01-basic-tool-tests.txt  02-role-workflow-tests.txt  03-ambiguous-request-tests.txt  04-context-interpretation-tests.txt  05-error-handling-tests.txt  06-complex-workflow-tests.txt  README.md  v0.3.0-user-tests.md
tests/: backward-compatibility.test.ts  customRoles.test.ts  (+15 more)
(+218 files in other folders)
